<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.pandora.rxandroid.MainActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_hello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_btn_hello"/>

    <Button
        android:id="@+id/btn_click_observer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_btn_observer"/>

    <Button
        android:id="@+id/btn_debounce"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Debounce"/>

    <Button
        android:id="@+id/btn_debounce_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Debounce Search"/>

    <Button
        android:id="@+id/btn_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_btn_recycle"/>

    <Button
        android:id="@+id/btn_volley"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="volley"/>

    <Button
        android:id="@+id/btn_okHttp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="okHttp"/>

    <Button
        android:id="@+id/btn_scheduler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_btn_scheduler"/>

    <Button
        android:id="@+id/btn_polling"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_btn_polling"/>

</LinearLayout>
